--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "codecov": "^3.0.2",
     "eslint": "^5.2.0",
     "istanbul": "^0.4.5",
+    "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "nodemon": "^1.17.5",
     "nyc": "^12.0.2",
